--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,32 +19,48 @@ else()
   target_compile_options(project_warnings
                          INTERFACE -Wall
                                    -Wextra # reasonable and standard
-                                   -Wshadow # warn the user if a variable declaration shadows one
-                                            # from a parent context
-                                   -Wnon-virtual-dtor # warn the user if a class with virtual
-                                                      # functions has a non-virtual destructor. This
-                                                      # helps catch hard to track down memory errors
+                                   -Wshadow # warn the user if a variable
+                                            # declaration shadows one from a
+                                            # parent context
+                                   -Wnon-virtual-dtor # warn the user if a class
+                                                      # with virtual functions
+                                                      # has a non-virtual
+                                                      # destructor. This helps
+                                                      # catch hard to track down
+                                                      # memory errors
                                    -Wold-style-cast # warn for c-style casts
-                                   -Wcast-align # warn for potential performance problem casts
+                                   -Wcast-align # warn for potential performance
+                                                # problem casts
                                    -Wunused # warn on anything being unused
-                                   -Woverloaded-virtual # warn if you overload (not override) a
+                                   -Woverloaded-virtual # warn if you overload
+                                                        # (not override) a
                                                         # virtual function
                                    -Wpedantic # warn if non-standard C++ is used
-                                   -Wconversion # warn on type conversions that may lose data
+                                   -Wconversion # warn on type conversions that
+                                                # may lose data
                                    -Wsign-conversion # warn on sign conversions
-                                   -Wmisleading-indentation # warn if identation implies blocks
-                                                            # where blocks do not exist
-                                   -Wduplicated-cond # warn if if / else chain has duplicated
-                                                     # conditions
-                                   -Wduplicated-branches # warn if if / else branches have
+                                   -Wmisleading-indentation # warn if identation
+                                                            # implies blocks
+                                                            # where blocks do
+                                                            # not exist
+                                   -Wduplicated-cond # warn if if / else chain
+                                                     # has duplicated conditions
+                                   -Wduplicated-branches # warn if if / else
+                                                         # branches have
                                                          # duplicated code
-                                   -Wlogical-op # warn about logical operations being used where
-                                                # bitwise were probably wanted
-                                   -Wnull-dereference # warn if a null dereference is detected
-                                   -Wuseless-cast # warn if you perform a cast to the same type
-                                   -Wdouble-promotion # warn if float is implicit promoted to double
-                                   -Wformat=2 # warn on security issues around functions that format
-                                              # output (ie printf)
+                                   -Wlogical-op # warn about logical operations
+                                                # being used where bitwise were
+                                                # probably wanted
+                                   -Wnull-dereference # warn if a null
+                                                      # dereference is detected
+                                   -Wuseless-cast # warn if you perform a cast
+                                                  # to the same type
+                                   -Wdouble-promotion # warn if float is
+                                                      # implicit promoted to
+                                                      # double
+                                   -Wformat=2 # warn on security issues around
+                                              # functions that format output (ie
+                                              # printf)
                          )
 endif()
 
@@ -52,9 +68,12 @@ set(CMAKE_CONAN_VERSION "v0.14")
 if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
   message(
     STATUS
-      "Downloading conan.cmake ${CMAKE_CONAN_VERSION} from https://github.com/conan-io/cmake-conan")
-  file(DOWNLOAD "https://github.com/conan-io/cmake-conan/raw/${CMAKE_CONAN_VERSION}/conan.cmake"
-       "${CMAKE_BINARY_DIR}/conan.cmake")
+      "Downloading conan.cmake ${CMAKE_CONAN_VERSION} from https://github.com/conan-io/cmake-conan"
+    )
+  file(
+    DOWNLOAD
+    "https://github.com/conan-io/cmake-conan/raw/${CMAKE_CONAN_VERSION}/conan.cmake"
+    "${CMAKE_BINARY_DIR}/conan.cmake")
 else()
   message(STATUS "Using existing conan.cmake")
 endif()
@@ -70,9 +89,11 @@ conan_add_remote(NAME
                  URL
                  https://api.bintray.com/conan/bincrafters/public-conan)
 
-# This will create the conanbuildinfo.cmake in the current binary dir, not the cmake_binary_dir
+# This will create the conanbuildinfo.cmake in the current binary dir, not the
+# cmake_binary_dir
 conan_cmake_run(REQUIRES
-  jsonformoderncpp/3.7.0@vthiery/stable
+                jsonformoderncpp/3.7.0@vthiery/stable
+                fmt/5.3.0@bincrafters/stable
                 BASIC_SETUP
                 CMAKE_TARGETS
                 NO_OUTPUT_DIRS
@@ -84,14 +105,13 @@ conan_cmake_run(REQUIRES
 
 set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
 find_package(jsonformoderncpp)
-
-
+find_package(fmt)
 
 add_executable(nu_plugin_calc src/nu_plugin_calc.cpp)
 target_compile_features(nu_plugin_calc PRIVATE cxx_std_17)
-target_link_libraries(nu_plugin_calc PRIVATE jsonformoderncpp::jsonformoderncpp project_warnings)
+target_link_libraries(nu_plugin_calc
+                      PRIVATE jsonformoderncpp::jsonformoderncpp
+                              fmt::fmt
+                              project_warnings)
 
 enable_testing()
-
-
-
